force-app/main/default/objects/Player__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>