force-app/main/default/objects/Player__c/fields/Player_Role__c.field-meta.xml
<CustomField>
    <fullName>Player_Role__c</fullName>
    <label>Player Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>Vice Captain</fullName>
            </value>
            <value>
                <fullName>Player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>