force-app/main/default/objects/Player__c/fields/Player_Type__c.field-meta.xml
<CustomField>
    <fullName>Player_Type__c</fullName>
    <label>Player Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batsmen</fullName>
            </value>
            <value>
                <fullName>Bowler</fullName>
            </value>
            <value>
                <fullName>Wicket Keeper</fullName>
            </value>
            <value>
                <fullName>All Rounder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>